--- a/StackExchange.Redis.Queue/Listener/project.json
+++ b/StackExchange.Redis.Queue/Listener/project.json
@@ -11,14 +11,12 @@
     },
     "StackExchange.Redis.Queue.Common": "1.0.0-*",
     "StackExchange.Redis.Queue.Wrapper": "1.0.0-*",
-    "Unity-CoreClr": "1.0.0-beta3"
+    "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final" 
   },
 
   "frameworks": {
     "netcoreapp1.0": {
-      "imports": "dnxcore50"
-    },
-    "netstandard1.5": {
       "imports": "dnxcore50"
     }
   }
