--- a/StackExchange.Redis.Queue/Publisher/project.json
+++ b/StackExchange.Redis.Queue/Publisher/project.json
@@ -11,7 +11,8 @@
     },
     "StackExchange.Redis.Queue.Common": "1.0.0-*",
     "StackExchange.Redis.Queue.Wrapper": "1.0.0-*",
-    "Unity-CoreClr": "1.0.0-beta3"
+    "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final"
   },
 
   "frameworks": {
