--- a/StackExchange.Redis.Queue/src/StackExchange.Redis.Queue.Common/project.json
+++ b/StackExchange.Redis.Queue/src/StackExchange.Redis.Queue.Common/project.json
@@ -3,13 +3,11 @@
 
   "dependencies": {
     "NETStandard.Library": "1.5.0-rc2-24027",
-    "Newtonsoft.Json": "8.0.3"
+    "Newtonsoft.Json": "8.0.3",
+    "System.Runtime.Serialization.Primitives": "4.1.1-rc2-24027"
   },
 
   "frameworks": {
-    "netcoreapp1.0": {
-      "imports": "dnxcore50"
-    },
     "netstandard1.5": {
       "imports": "dnxcore50"
     }
