--- a/StackExchange.Redis.Queue/Publisher/project.json
+++ b/StackExchange.Redis.Queue/Publisher/project.json
@@ -12,7 +12,8 @@
     "StackExchange.Redis.Queue.Common": "1.0.0-*",
     "StackExchange.Redis.Queue.Wrapper": "1.0.0-*",
     "Microsoft.Extensions.DependencyInjection": "1.0.0-rc2-final",
-    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final"
+    "Microsoft.Extensions.DependencyInjection.Abstractions": "1.0.0-rc2-final",
+    "StackExchange.Redis.Message.Common": "1.0.0-*"
   },
 
   "frameworks": {
