--- a/StackExchange.Redis.Queue/src/StackExchange.Redis.Message.Common/project.json
+++ b/StackExchange.Redis.Queue/src/StackExchange.Redis.Message.Common/project.json
@@ -2,9 +2,7 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-24027",
-    "Newtonsoft.Json": "8.0.3",
-    "System.Runtime.Serialization.Primitives": "4.1.1-rc2-24027"
+    "NETStandard.Library": "1.5.0-rc2-24027"
   },
 
   "frameworks": {
