--- a/StackExchange.Redis.Queue/src/StackExchange.Redis.Queue.Wrapper/project.json
+++ b/StackExchange.Redis.Queue/src/StackExchange.Redis.Queue.Wrapper/project.json
@@ -10,6 +10,9 @@
   "frameworks": {
     "netstandard1.5": {
       "imports": "dnxcore50"
+    },
+    "netcoreapp1.0": {
+      "imports": "dnxcore50"
     }
   }
 }
